--- a/go2_driver/CMakeLists.txt
+++ b/go2_driver/CMakeLists.txt
@@ -6,6 +6,56 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_lifecycle REQUIRED)
+find_package(rclcpp_components REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
+find_package(go2_interfaces REQUIRED)
+find_package(tf2_ros REQUIRED)
+
+set(dependencies
+  rclcpp
+  rclcpp_lifecycle
+  rclcpp_components
+  sensor_msgs
+  geometry_msgs
+  nav_msgs
+  go2_interfaces
+  tf2_ros
+)
+
+include_directories(include)
+
+add_library(${PROJECT_NAME} SHARED
+  src/go2_driver/go2_driver.cpp
+)
+
+ament_target_dependencies(${PROJECT_NAME} ${dependencies})
+
+rclcpp_components_register_nodes(${PROJECT_NAME} "go2_driver::Go2Driver")
+
+install(TARGETS
+  ${PROJECT_NAME}
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
+  DESTINATION lib
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+install(DIRECTORY include/
+  DESTINATION include
+)
+
+install(DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
+ament_export_include_directories(include)
+ament_export_libraries(${PROJECT_NAME})
+ament_export_dependencies(${dependencies})
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
