--- a/go2_driver/CMakeLists.txt
+++ b/go2_driver/CMakeLists.txt
@@ -12,7 +12,7 @@ find_package(rclcpp_components REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
-find_package(go2_interfaces REQUIRED)
+find_package(unitree_go REQUIRED)
 find_package(tf2_ros REQUIRED)
 
 set(dependencies
@@ -22,7 +22,7 @@ set(dependencies
   sensor_msgs
   geometry_msgs
   nav_msgs
-  go2_interfaces
+  unitree_go
   tf2_ros
 )
 
