--- a/go2_driver/package.xml
+++ b/go2_driver/package.xml
@@ -15,7 +15,7 @@
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>nav_msgs</depend>
-  <depend>go2_interfaces</depend>
+  <depend>unitree_go</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
