Minor changes & added cmd_vel
Signed-off-by: Juancams <jc.manzanares.serrano@gmail.com>

--- a/go2_driver/CMakeLists.txt
+++ b/go2_driver/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(unitree_go REQUIRED)
+find_package(unitree_api REQUIRED)
 find_package(tf2_ros REQUIRED)
 
 set(dependencies
@@ -23,6 +24,7 @@ set(dependencies
   geometry_msgs
   nav_msgs
   unitree_go
+  unitree_api
   tf2_ros
 )
 
