--- a/go2_driver/package.xml
+++ b/go2_driver/package.xml
@@ -16,6 +16,7 @@
   <depend>geometry_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>unitree_go</depend>
+  <depend>unitree_api</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
