--- a/unitree_go/package.xml
+++ b/unitree_go/package.xml
@@ -9,6 +9,7 @@
   
   <build_depend>rosidl_default_generators</build_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
+  <depend>rosidl_generator_dds_idl</depend>
   <member_of_group>rosidl_interface_packages</member_of_group>
   <buildtool_depend>ament_cmake</buildtool_depend>
 
