--- a/go2_driver/package.xml
+++ b/go2_driver/package.xml
@@ -17,6 +17,7 @@
   <depend>nav_msgs</depend>
   <depend>unitree_go</depend>
   <depend>unitree_api</depend>
+  <depend>tf2_ros</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
