--- a/go2_bringup/CMakeLists.txt
+++ b/go2_bringup/CMakeLists.txt
@@ -7,6 +7,11 @@ endif()
 
 find_package(ament_cmake REQUIRED)
 
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   set(ament_cmake_copyright_FOUND TRUE)
