--- a/go2_bringup/package.xml
+++ b/go2_bringup/package.xml
@@ -9,6 +9,9 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>go2_description</depend>
+  <depend>go2_driver</depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
